[metadata]
name = Password_Validity_Checker
version = 0.0.1
author = Amogh Jhamb
author_email = amogh100109@gmail.com
description = A password validity checker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ammo78/Password_Validity_Checker
project_urls =
    Bug Tracker = https://github.com/Ammo78/Password_Validity_Checker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = Password_Validity_Checker
packages = find:
python_requires = >=3.6

[options.packages.find]
where = Password_Validity_Checker