[metadata]
name = Password_ValidityChecker
version = 0.0.1
author = Amogh Jhamb
author_email = amogh100109@gmail.com
description = A password validity checker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ammo78/Password_ValidityChecker
project_urls =
    Bug Tracker = https://github.com/Ammo78/Password_ValidityChecker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = Password_ValidityChecker
packages = find:
python_requires = >=3.6

[options.packages.find]
where = Password_ValidityChecker